crates/keron-lang/tests/corpus/errors/parse/reconcile_block_empty.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `}`, expected expression
  --> 1:13
  |
1 | reconcile { }
  |             ^
  = help: write an expression (literal, name, call, or `(…)`).
